--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -1,47 +1,49 @@
 {
   "locale": "de",
   "translations": {
-    "2454050363478003966": "Login",
-    "5248717555542428023": "Username",
-    "1431416938026210429": "Password",
-    "134747677667892787": " Login Failed ",
-    "8720977247725652816": "Ok",
-    "2159130950882492111": "Cancel",
-    "2101902914887471883": "Signin",
-    "4314910104023472121": " Passwords do not match ",
-    "4768749765465246664": "Email",
-    "5737826809482564922": " Signin Failed ",
-    "5947880671711400443": "Portfolio Manager_de",
-    "3797778920049399855": "Logout",
+    "loginLogin": "Login",
+    "username": "Username",
+    "password": "Password",
+    "loginLoginFailed": " Login Failed ",
+    "ok": "Ok",
+    "cancel": "Cancel",
+    "signin": "Signin",
+    "loginPasswordsNoMatch": " Passwords do not match ",
+    "email": "Email",
+    "loginSigninFailed": " Signin Failed ",
+    "mainPortfolioManager": "Portfolio Manager_de",
+    "login": "Login",
+    "logout": "Logout",
     "onlineAgainMsg": "Your token is expired. To reconnect please logout and login again.",
     "symbolId": "SymbolId",
-    "2131483310689963123": "symbolName",
-    "2182882890136113634": " Symbol: {$INTERPOLATION} Name: {$INTERPOLATION_1} ",
+    "addSymbolSymbolName": "SymbolName",
+    "addSymbolSymbolAndName": " Symbol: {$INTERPOLATION} Name: {$INTERPOLATION_1} ",
     "8109023045911893457": "symbol",
-    "3512695280680161282": "weight",
-    "4782966356126666886": "Add date",
-    "8838044131643733770": " No Symbol selected. ",
-    "4299467318965233262": " Loading... ",
-    "4958477305835541670": "Symbol: {$INTERPOLATION}",
-    "5722235063735091336": "Name: {$INTERPOLATION}",
-    "1057197217265883334": "Weight: {$INTERPOLATION}",
-    "2979570150881779599": "Importing Quotes...",
-    "2649486686084823841": "Dev Config Values",
-    "7702026234333055420": "Classname: ",
-    "7819314041543176992": "Close",
-    "5565574890590779849": "Portfolioname",
-    "2275532246801944011": "Creation date",
-    "8975168935082950357": " Input invalid ",
-    "2892412979837680989": "Config",
-    "1343638087305375127": "Import Symbols",
-    "2181125234942124112": "New Portfolio",
-    "PortfolioChartName": "Portfolio: {$INTERPOLATION}",
-    "PortfolioChartStartDate": "Start Date: {$INTERPOLATION}",
-    "2025920254154150105": "Pick your timeframe:",
-    "3101685169130926205": "Pick your comparison index:",
-    "1502749582407706422": "EuroStoxx 50",
-    "161676204030686621": "Msci China",
-    "3922452808435047387": "S&P 500",
+    "addSymbolWeight": "weight",
+    "addSymbolAddDate": "Add date",
+    "addSymbolNoSymbol": " No Symbol selected. ",
+    "loading": " Loading... ",
+    "symbol": "Symbol: {$INTERPOLATION}",
+    "name": "Name: {$INTERPOLATION}",
+    "weight": "Weight: {$INTERPOLATION}",
+    "addSymbolImportingQuotes": "Importing Quotes...",
+    "devConfigValues": "Dev Config Values",
+    "classname": "Classname: ",
+    "close": "Close",
+    "newPortfolioPortfolioName": "Portfolioname",
+    "newPortfolioCreationDate": "Creation date",
+    "newPortfolioInputInvalid": " Input invalid ",
+    "overviewPortfolioManger": "Portfolio Manager",
+    "config": "Config",
+    "overviewImportSymbols": "Import Symbols",
+    "overviewNewPortfolio": "New Portfolio",
+    "portfolioChartsName": "Portfolio: {$INTERPOLATION}",
+    "portfolioChartsStartDate": "Start Date: {$INTERPOLATION}",
+    "pickTimeframe": "Pick your timeframe:",
+    "pickCompIndex": "Pick your comparison index:",
+    "es50": "EuroStoxx 50",
+    "msciChina": "Msci China",
+    "sAndP500": "S&P 500",
     "oneMonth": "1 Month",
     "threeMonths": "3 Months",
     "sixMonths": "6 Months",
@@ -49,36 +51,38 @@
     "threeYears": "3 Years",
     "fiveYears": "5 Years",
     "tenYears": "10 Years",
-    "8778616811237742446": " Name ",
-    "5889120163036350792": " Stocks ",
-    "3327943916615862345": " 1 Month ",
-    "1142738431832983244": " 6 Months ",
-    "2673352027948565011": " 1 Year ",
-    "8441613909398609168": " 2 Year ",
-    "2914896140154887856": " 5 Year ",
-    "5262163205177449992": " 10 Year ",
-    "6387770458001125573": "Prod Config Values",
-    "3591505830709732358": "Portfolio {$INTERPOLATION}",
+    "portfolioTableName": " Name ",
+    "portfolioTableStocks": " Stocks ",
+    "month1": " 1 Month ",
+    "month6": " 6 Months ",
+    "year1": " 1 Year ",
+    "year2": " 2 Year ",
+    "year5": " 5 Year ",
+    "year10": " 10 Year ",
+    "prodConfigValues": "Prod Config Values",
+    "portfolioPortfolio": "Portfolio {$INTERPOLATION}",
     "2849064100927111571": "loading...",
     "8890553633144307762": "Back",
-    "5021063261180291058": "Changed at: {$INTERPOLATION}",
-    "3560441197067907289": "Currency: {$INTERPOLATION}",
-    "5583652278295195945": "Sector: {$INTERPOLATION}",
-    "5066170900683702829": "Industry: {$INTERPOLATION}",
-    "9014435997703025963": "Address: {$INTERPOLATION}",
-    "8985537790514514521": "Country: {$INTERPOLATION}",
-    "6276545049878546664": "Description: {$INTERPOLATION}",
-    "1211932677134347164": "Start Date: {$INTERPOLATION}",
-    "7271664981483258786": "End Date: {$INTERPOLATION}",
-    "1520841753557847971": "Open: {$INTERPOLATION}",
-    "1004657938675226836": "High: {$INTERPOLATION}",
-    "205830441523556511": "Low: {$INTERPOLATION}",
-    "4010765040085514375": "Close: {$INTERPOLATION}",
-    "3117435211202991889": "Average Volume: {$INTERPOLATION}",
-    "1044613070545278680": "Average Close: {$INTERPOLATION}",
-    "493170218385935127": "Median Close: {$INTERPOLATION}",
-    "3175230076568977146": "Volatility Close: {$INTERPOLATION}%",
+    "3797778920049399855": "Logout",
+    "symboOverviewChangedAt": "Changed at: {$INTERPOLATION}",
+    "currency": "Currency: {$INTERPOLATION}",
+    "symbolOverivewSector": "Sector: {$INTERPOLATION}",
+    "symbolOverivewIndustry": "Industry: {$INTERPOLATION}",
+    "symbolOverivewAddress": "Address: {$INTERPOLATION}",
+    "symbolOverivewCountry": "Country: {$INTERPOLATION}",
+    "symbolOverivewDescription": "Description: {$INTERPOLATION}",
+    "symbolStartDate": "Start Date: {$INTERPOLATION}",
+    "symbolEndDate": "End Date: {$INTERPOLATION}",
+    "symbolOpen": "Open: {$INTERPOLATION}",
+    "symbolHigh": "High: {$INTERPOLATION}",
+    "symbolLow": "Low: {$INTERPOLATION}",
+    "symbolClose": "Close: {$INTERPOLATION}",
+    "symbolCurrency": "Currency: {$INTERPOLATION}",
+    "symbolAvgVolume": "Average Volume: {$INTERPOLATION}",
+    "symbolAvgClose": "Average Close: {$INTERPOLATION}",
+    "symbolMedClose": "Median Close: {$INTERPOLATION}",
+    "symbolVolClose": "Volatility Close: {$INTERPOLATION}%",
     "intraDay": "IntraDay",
-    "7132810695222123633": "Willkommen im AngularPortfolioManager"
+    "spinnerWelcome": "Willkomen beim AngularPortfolioManager"
   }
 }
