--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -44,19 +44,14 @@
     "es50": "EuroStoxx 50",
     "msciChina": "Msci China",
     "sAndP500": "S&P 500",
-    "oneMonth": "1 Month",
-    "threeMonths": "3 Months",
-    "sixMonths": "6 Months",
-    "oneYear": "1 Year",
-    "threeYears": "3 Years",
-    "fiveYears": "5 Years",
-    "tenYears": "10 Years",
     "portfolioTableName": " Name ",
     "portfolioTableStocks": " Stocks ",
     "month1": " 1 Month ",
+    "month3": "3 Months",
     "month6": " 6 Months ",
     "year1": " 1 Year ",
     "year2": " 2 Year ",
+    "year3": " 3 Year ",
     "year5": " 5 Year ",
     "year10": " 10 Year ",
     "prodConfigValues": "Prod Config Values",
