--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -44,16 +44,16 @@
     "es50": "EuroStoxx 50",
     "msciChina": "Msci China",
     "sAndP500": "S&P 500",
+    "month1": "1 Month",
+    "month3": "3 Months",
+    "month6": "6 Months",
+    "year1": "1 Year",
+    "year3": "3 Years",
+    "year5": "5 Years",
+    "year10": "10 Years",
     "portfolioTableName": " Name ",
     "portfolioTableStocks": " Stocks ",
-    "month1": " 1 Month ",
-    "month3": "3 Months",
-    "month6": " 6 Months ",
-    "year1": " 1 Year ",
-    "year2": " 2 Year ",
-    "year3": " 3 Year ",
-    "year5": " 5 Year ",
-    "year10": " 10 Year ",
+    "year2": "2 Years",
     "prodConfigValues": "Prod Config Values",
     "portfolioPortfolio": "Portfolio {$INTERPOLATION}",
     "2849064100927111571": "loading...",
