--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -37,23 +37,14 @@
     "config": "Config",
     "overviewImportSymbols": "Import Symbols",
     "overviewNewPortfolio": "New Portfolio",
-    "portfolioChartsName": "Portfolio: {$INTERPOLATION}",
-    "portfolioChartsStartDate": "Start Date: {$INTERPOLATION}",
-    "pickTimeframe": "Pick your timeframe:",
-    "pickCompIndex": "Pick your comparison index:",
-    "es50": "EuroStoxx 50",
-    "msciChina": "Msci China",
-    "sAndP500": "S&P 500",
-    "month1": "1 Month",
-    "month3": "3 Months",
-    "month6": "6 Months",
-    "year1": "1 Year",
-    "year3": "3 Years",
-    "year5": "5 Years",
-    "year10": "10 Years",
     "portfolioTableName": " Name ",
     "portfolioTableStocks": " Stocks ",
+    "month1": "1 Month",
+    "month6": "6 Months",
+    "year1": "1 Year",
     "year2": "2 Years",
+    "year5": "5 Years",
+    "year10": "10 Years",
     "prodConfigValues": "Prod Config Values",
     "portfolioPortfolio": "Portfolio {$INTERPOLATION}",
     "2849064100927111571": "loading...",
@@ -77,7 +68,17 @@
     "symbolAvgClose": "Average Close: {$INTERPOLATION}",
     "symbolMedClose": "Median Close: {$INTERPOLATION}",
     "symbolVolClose": "Volatility Close: {$INTERPOLATION}%",
+    "pickTimeframe": "Pick your timeframe:",
+    "pickCompIndex": "Pick your comparison index:",
+    "es50": "EuroStoxx 50",
+    "msciChina": "Msci China",
+    "sAndP500": "S&P 500",
     "intraDay": "IntraDay",
-    "spinnerWelcome": "Willkomen beim AngularPortfolioManager"
+    "month3": "3 Months",
+    "year3": "3 Years",
+    "portfolioChartsSectors": "Portfolio Sectors",
+    "portfolioChartsName": "Portfolio: {$INTERPOLATION}",
+    "portfolioChartsStartDate": "Start Date: {$INTERPOLATION}",
+    "spinnerWelcome": "Welcome to AngularPortfolioManager_de"
   }
 }
