--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -37,6 +37,7 @@
     "config": "Config",
     "overviewImportSymbols": "Import Symbols",
     "overviewNewPortfolio": "New Portfolio",
+    "overviewPortfolioCalc": "Portfolio Calculation",
     "portfolioTableName": " Name ",
     "portfolioTableStocks": " Stocks ",
     "month1": "1 Month",
