--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -1,24 +1,44 @@
 {
   "locale": "de",
   "translations": {
+    "query": "Query",
+    "operator": "Operator",
+    "year": "Year",
+    "createQuerySymbol": "Symbol",
+    "phSymbol": "symbol",
+    "quarter": "Quarter",
+    "createQueryAvailableQueryItems": "Available Query\tItems",
+    "createQueryAddQueryItems": "To add a Query Item. Drag it down.",
+    "createQueryQueryItems": "Query Items",
+    "createQueryRemoveQueryItems": "To remove a Query Item. Drag it up.",
+    "financialDataImport": "Financialdata import",
+    "filepath": "Filepath: ",
+    "filename": "Filename",
+    "ok": "Ok",
+    "cancel": "Cancel",
+    "overviewFinancialData": "Financial Data",
+    "importFinancials": "Import Financials",
+    "back": "Back",
+    "logout": "Logout",
+    "createQueryQueryItemConcept": "Concept",
+    "phConcept": "concept",
+    "value": "Value",
+    "queryTermStart": "Term Start",
+    "queryTermEnd": "Term End",
     "loginLogin": "Login",
     "username": "Username",
     "password": "Password",
     "loginLoginFailed": " Login Failed ",
-    "ok": "Ok",
-    "cancel": "Cancel",
     "signin": "Signin",
     "loginPasswordsNoMatch": " Passwords do not match ",
     "email": "Email",
     "loginSigninFailed": " Signin Failed ",
     "mainPortfolioManager": "Portfolio Manager_de",
     "login": "Login",
-    "logout": "Logout",
     "onlineAgainMsg": "Your token is expired. To reconnect please logout and login again.",
     "symbolId": "SymbolId",
     "addSymbolSymbolName": "SymbolName",
     "addSymbolSymbolAndName": " Symbol: {$INTERPOLATION} Name: {$INTERPOLATION_1} ",
-    "8109023045911893457": "symbol",
     "addSymbolWeight": "weight",
     "addSymbolAddDate": "Add date",
     "addSymbolNoSymbol": " No Symbol selected. ",
@@ -37,6 +57,7 @@
     "config": "Config",
     "overviewImportSymbols": "Import Symbols",
     "overviewNewPortfolio": "New Portfolio",
+    "overviewToFinancialData": "To Financial Data",
     "overviewPortfolioCalc": "Portfolio Calculation",
     "portfolioTableName": " Name ",
     "portfolioTableStocks": " Stocks ",
@@ -48,9 +69,6 @@
     "year10": "10 Years",
     "prodConfigValues": "Prod Config Values",
     "portfolioPortfolio": "Portfolio {$INTERPOLATION}",
-    "2849064100927111571": "loading...",
-    "8890553633144307762": "Back",
-    "3797778920049399855": "Logout",
     "symboOverviewChangedAt": "Changed at: {$INTERPOLATION}",
     "currency": "Currency: {$INTERPOLATION}",
     "symbolOverivewSector": "Sector: {$INTERPOLATION}",
