--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -1,15 +1,16 @@
 {
   "locale": "de",
   "translations": {
-    "query": "Query",
+    "createQueryCompanyQuery": "Company Query",
+    "search": "Search",
     "operator": "Operator",
     "year": "Year",
     "createQuerySymbol": "Symbol",
     "phSymbol": "symbol",
     "quarter": "Quarter",
-    "createQueryAvailableQueryItems": "Available Query\tItems",
+    "createQueryAvailableSecQueryItems": "Available Sec Query Items",
     "createQueryAddQueryItems": "To add a Query Item. Drag it down.",
-    "createQueryQueryItems": "Query Items",
+    "createQuerySecQueryItems": "Sec Query Items",
     "createQueryRemoveQueryItems": "To remove a Query Item. Drag it up.",
     "financialDataImport": "Financialdata import",
     "filepath": "Filepath: ",
@@ -20,6 +21,7 @@
     "importFinancials": "Import Financials",
     "back": "Back",
     "logout": "Logout",
+    "query": "Query",
     "createQueryQueryItemConcept": "Concept",
     "phConcept": "concept",
     "value": "Value",
