--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -26,6 +26,7 @@
     "phConcept": "concept",
     "value": "Value",
     "queryTermStart": "Term Start",
+    "end": "End",
     "queryTermEnd": "Term End",
     "loginLogin": "Login",
     "username": "Username",
