--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -21,6 +21,13 @@
     "importFinancials": "Import Financials",
     "back": "Back",
     "logout": "Logout",
+    "queryResultsConcept": "Concept",
+    "queryResultsSymbol": "Symbol",
+    "queryResultsYear": "Year",
+    "queryResultsQuarter": "Quarter",
+    "queryResultsCurrency": "Currency",
+    "queryResultsValue": "Value",
+    "queryResultsNoMatchingData": "No matching data found for filter: \"{$INTERPOLATION}\"",
     "query": "Query",
     "createQueryQueryItemConcept": "Concept",
     "phConcept": "concept",
