--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -44,8 +44,9 @@
     "loginPasswordsNoMatch": " Passwords do not match ",
     "email": "Email",
     "loginSigninFailed": " Signin Failed ",
-    "mainPortfolioManager": "Portfolio Manager_de",
-    "login": "Login",
+    "loginWaiting": "Waiting...",
+    "mainPortfolioManager": "Portfolio Manager",
+    "login": " Login ",
     "onlineAgainMsg": "Your token is expired. To reconnect please logout and login again.",
     "symbolId": "SymbolId",
     "addSymbolSymbolName": "SymbolName",
