--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -59,6 +59,11 @@
     "name": "Name: {$INTERPOLATION}",
     "weight": "Weight: {$INTERPOLATION}",
     "addSymbolImportingQuotes": "Importing Quotes...",
+    "changeSymbolName": "Name: ",
+    "changeSymbolSymbol": "Symbol: ",
+    "changeSymbolCurrency": "Currency: ",
+    "changeSymbolWeight": "Weight",
+    "changeSymbolUpdatingQuotes": "Updating Quotes...",
     "devConfigValues": "Dev Config Values",
     "classname": "Classname: ",
     "close": "Close",
