--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -63,6 +63,7 @@
     "changeSymbolSymbol": "Symbol: ",
     "changeSymbolCurrency": "Currency: ",
     "changeSymbolWeight": "Weight",
+    "changeSymbolChangeDate": "change date",
     "changeSymbolUpdatingQuotes": "Updating Quotes...",
     "devConfigValues": "Dev Config Values",
     "classname": "Classname: ",
