--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -8,6 +8,9 @@
     "createQuerySymbol": "Symbol",
     "phSymbol": "symbol",
     "quarter": "Quarter",
+    "createQueryName": "Name",
+    "phName": "name",
+    "country": "Country",
     "createQueryAvailableSecQueryItems": "Available Sec Query Items",
     "createQueryAddQueryItems": "To add a Query Item. Drag it down.",
     "createQuerySecQueryItems": "Sec Query Items",
@@ -36,6 +39,8 @@
     "queryTermStart": "Term Start",
     "end": "End",
     "queryTermEnd": "Term End",
+    "queryResultsLabel": "Label",
+    "queryResultsInfo": "Info",
     "loginLogin": "Login",
     "username": "Username",
     "password": "Password",
