feat: add quote updat

--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -80,6 +80,7 @@
     "newPortfolioInputInvalid": " Input invalid ",
     "overviewPortfolioManger": "Portfolio Manager",
     "config": "Config",
+    "overviewUpdateQuotes": "Update Quotes",
     "overviewImportSymbols": "Import Symbols",
     "overviewNewPortfolio": "New Portfolio",
     "overviewToFinancialData": "To Financial Data",
