feat: add import dialog

--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -16,11 +16,13 @@
     "createQuerySecQueryItems": "Sec Query Items",
     "createQueryRemoveQueryItems": "To remove a Query Item. Drag it up.",
     "financialDataImport": "Financialdata import",
+    "dailyQuotesImport": "DailyQuotes import",
     "filepath": "Filepath: ",
     "filename": "Filename",
     "ok": "Ok",
     "cancel": "Cancel",
     "overviewFinancialData": "Financial Data",
+    "importDailyQuotes": "Import DailyQuotes",
     "importFinancials": "Import Financials",
     "back": "Back",
     "logout": "Logout",
