--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -41,6 +41,7 @@
     "queryTermStart": "Term Start",
     "end": "End",
     "queryTermEnd": "Term End",
+    "queryResultsElementType": "Type",
     "queryResultsLabel": "Label",
     "queryResultsInfo": "Info",
     "loginLogin": "Login",
