feat: add remove date

--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -74,6 +74,8 @@
     "changeSymbolCurrency": "Currency: ",
     "changeSymbolWeight": "Weight",
     "changeSymbolChangeDate": "change date",
+    "changeSymbolDeleteSymbol": "Delete Symbol ?",
+    "delete": "Delete",
     "changeSymbolUpdatingQuotes": "Updating Quotes...",
     "devConfigValues": "Dev Config Values",
     "classname": "Classname: ",
