feat: add translations

--- a/frontend/src/angular/i18n/messages.de.json
+++ b/frontend/src/angular/i18n/messages.de.json
@@ -123,16 +123,27 @@
     "es50": "EuroStoxx 50",
     "msciChina": "Msci China",
     "sAndP500": "S&P 500",
-    "intraDay": "IntraDay",
     "month3": "3 Months",
     "year3": "3 Years",
     "portfolioChartsSectors": "Portfolio Sectors",
     "portfolioChartsTimechart": "Portfolio Timechart",
+    "portfolioChartsStats": "Portfolio Stats",
     "portfolioChartsYahooFinance": "Yahoo Finance",
     "portfolioChartsCnbcFinance": "Cnbc Finance",
     "portfolioChartsName": "Portfolio: {$INTERPOLATION}",
     "portfolioChartsStartDate": "Start Date: {$INTERPOLATION}",
-    "portfolioSectorsLegendTitle": "Portfolio sector distribution",
+    "portfolioSectorsLegendTitle": " Portfolio sector distribution ",
+    "portfolioStatsHeading": "Portfolio Statistics",
+    "portfolioStatsCorrelationSp500": "Year{$INTERPOLATION}CorrelationSp500:",
+    "portfolioStatsCorrelationMsciChina": "Year{$INTERPOLATION}CorrelationMsciChina",
+    "portfolioStatsCorrelationEuroStoxx50": "Year{$INTERPOLATION}CorrelationEuroStoxx50",
+    "portfolioStatsLinRegReturnSp500": "Year{$INTERPOLATION}LinRegReturnSp500",
+    "portfolioStatsLinRegMsciChina": "year{$INTERPOLATION}LinRegReturnMsciChina",
+    "portfolioStatsLinRegEuroStoxx50": "Year{$INTERPOLATION}LinRegReturnEuroStoxx50",
+    "portfolioStatsSigmaSp500": "Year{$INTERPOLATION}SigmaSp500",
+    "portfolioStatsSigmaMsciChina": "Year{$INTERPOLATION}SigmaMsciChina",
+    "portfolioStatsSigmaEuroStoxx50": "Year{$INTERPOLATION}SigmaEuroStoxx50",
+    "portfolioStatsSigmaPortfolio": "Year{$INTERPOLATION}SigmaPortfolio",
     "spinnerWelcome": "Welcome to AngularPortfolioManager_de"
   }
 }
